--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ header{
 #btn-menu{
 	display: none;
 }
+#logout{
+	display: none;
+}
 header label{
 	display: none;
 	width: 30px;
@@ -62,6 +65,56 @@ header .logo {
 .logo i{
 	font-size: 50px;
 }
+.container-username {
+	
+	padding-bottom: 30px;
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	justify-content: center;
+	width: 100%;
+}
+.form-body {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: center;
+	margin-top: 0;
+	margin-bottom: auto;
+	width: 50%;
+}
+.form-body h1{
+	text-align: center;
+	padding-top: 120px;
+	padding-bottom: 25px;
+}
+.botonL{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 100%;
+	padding-top: 25px;
+}
+.form-control {
+	border: 0;
+    padding: 0;
+    font-size: 14px;
+    line-height: 1.42857143;
+    height: 2.2em;
+    color: #6b6b6b;
+	background-color:#ffffff;
+	border: 2px solid black;
+    background-image: none;
+	margin-bottom: 10px;
+	outline: none;
+}
+.form-control-lg {
+    width: 100%;
+}
+.btn-lg{
+	height: 50px;
+}
 header {
 	background-color: #348d9d;
 	padding: 10px 0;
@@ -72,7 +125,7 @@ header .container {
 }
 footer{
 	position: absolute;
-	height: 20%;
+	height: auto;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
