--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ header .logo {
 	font-size: 50px;
 }
 .container-username {
-	
 	padding-bottom: 30px;
 	align-items: center;
 	display: flex;
@@ -158,6 +157,10 @@ footer{
 	}
 	#btn-menu:checked ~ .menu {
 		margin: 0;
+	}
+	.form-body{
+		margin-top: 0;
+		margin-bottom: 100%;
 	}
 	footer{
 		position: fixed;
