--- a/style.css
+++ b/style.css
@@ -143,6 +143,29 @@ header .logo {
 	/*background: rgba(0, 0, 0, 0.3);*/
 	background: #348d9d8c;
 }
+.product-added{
+	display: flex;
+	flex-direction: column;
+	margin: 10px;
+}
+.container-imgcart{
+	display: flex;
+	flex-direction: row;
+	margin: 10px;
+}
+.container-imgcart img{
+	margin-right: auto;
+}
+.container-info{
+	margin-right: auto;
+}
+.total{
+	display: flex;
+	flex-direction: column;
+}
+.total-price{
+	align-self: center;
+}
 .btn-view{
 	text-align: center;
 	display: block;
@@ -151,6 +174,17 @@ header .logo {
     color: #000000;
 	text-decoration: none;
 	align-self: center;
+}
+.pagar{
+	width: 70%;
+	height: 50px;
+	align-self: center;
+}
+.btn-pay{
+	display: flex;
+	flex-direction: column;
+	align-self: center;
+	padding: 10px;
 }
 header {
 	background-color: #348d9d;
@@ -166,7 +200,7 @@ header .container {
 	flex-flow: wrap;
 }
 #main-products .name{
-	font-size: 10px;
+	font-size: 15px;
 }
 footer{
 	position: relative;
