--- a/style.css
+++ b/style.css
@@ -129,6 +129,8 @@ header .logo {
 }
 .btn-lg{
 	height: 50px;
+	background-color: #348d9d;
+	border: none;
 }
 .btnAdd{
 	height: 50px;
@@ -143,6 +145,9 @@ header .logo {
 	/*background: rgba(0, 0, 0, 0.3);*/
 	background: #348d9d8c;
 }
+.btn-lg:hover{
+	background: #348d9d8c;
+}
 .product-added{
 	display: flex;
 	flex-direction: column;
@@ -153,11 +158,11 @@ header .logo {
 	flex-direction: row;
 	margin: 10px;
 }
-.container-imgcart img{
-	margin-right: auto;
-}
 .container-info{
-	margin-right: auto;
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+	margin: 10px;
 }
 .total{
 	display: flex;
@@ -181,7 +186,6 @@ header .logo {
 	align-self: center;
 	border: none;
 	background-color: #348d9d;
-	font-style: bold;
 }
 .pagar:hover{
 	background: #348d9d8c;
@@ -249,6 +253,22 @@ footer{
 	}
 	.product-container, #products, #main-products{
 		display: grid;
+	}
+	.product-added{
+		display: flex;
+		flex-direction: column;
+		align-content: center;
+	}
+	.container-imgcart{
+		display: flex;
+		flex-direction: column;
+		align-content: center;
+		margin: 10px;
+	}
+	.container-info{
+		display: flex;
+		flex-direction: column;
+		align-content: center;
 	}
 	footer{
 		position: relative;
